--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     
-       src="https://www.gstatic.com/firebasejs/8.6.5/firebase-app.js"></script>
+       <script src="https://www.gstatic.com/firebasejs/8.6.5/firebase-app.js"></script>
        <script src="https://www.gstatic.com/firebasejs/8.6.5/firebase-firestore.js"></script>
        <script src="https://www.gstatic.com/firebasejs/live/3.1/firebase.js"></script>
        <link rel="stylesheet" type="text/css" href="style/style.css">
